--- a/src/contact.html
+++ b/src/contact.html
@@ -35,12 +35,12 @@
       </nav> </div>
 
     <div class="content-left-top">
-      <h2><b>Find me on <a href="https://www.linkedin.com/in/adrianne-crouse-85811148" alt="LinkedIN">LinkedIN</a></b><br>
+      <h2><b>Find me on <a href="https://www.linkedin.com/in/adrianne-crouse-85811148">LinkedIN</a></b><br>
         <b>Send Me An <a href="mailto:adrianne@bu.edu">Email</a></b></h2>
       <p class="maintext"></p>
     </div>
     <div class="content-left-bottom">
-      <p class="maintext">Transcript from audio on main page:<br></p>
+      <h4>Transcript from audio on main page:</h4><br>
       <article class="scrolltext"><p class="paratext">
         My name is Adrianne Crouse. I’m a network support engineer for the <abbr title="Louisiana Optical Network Infrastrucutre">LONI</abbr>,
         <a href="http://www.loni.org">L O N I .org</a>, at LSU in Baton Rouge.
@@ -60,7 +60,7 @@
 
     <div class="content-rightlow"><br>
 
-<img src="images/pool.jpg">
+<img src="images/pool.jpg" alt="pool">
     </div>
 
     <div class="foot">
