--- a/src/edu-writing.html
+++ b/src/edu-writing.html
@@ -40,11 +40,11 @@
     </div>
     <div class="content-topR">
       <h3>Favorite Assignments from the Nova Southeastern MSIT program:</h3>
-    <div class="list">
-      <li><a href="olddata/Telecom-StateOfLouisiana.pdf" alt="State">MPLS: Yesterday and Today based on state job experience</a></li>
-      <li><a href="olddata/telecom-routing.pdf" alt="ISIS">ISIS routing vs MPLS: drawn from present work experience</a></li>
-      <li><a href="olddata/datamining-in-telecom.pdf" alt="Mining">A study on the use of data mining in telecommunications</a></li>
-      <li><a href="olddata/ISEC-2-databreach.pdf" alt="ISEC">A review of the 2017 NotPetya data breach - fascinating subject </a></li>
+    <div class="list"><ul>
+      <li><a href="olddata/Telecom-StateOfLouisiana.pdf">MPLS: Yesterday and Today based on state job experience</a></li>
+      <li><a href="olddata/telecom-routing.pdf">ISIS routing vs MPLS: drawn from present work experience</a></li>
+      <li><a href="olddata/datamining-in-telecom.pdf">A study on the use of data mining in telecommunications</a></li>
+      <li><a href="olddata/ISEC-2-databreach.pdf">A review of the 2017 NotPetya data breach - fascinating subject </a></li></ul>
   </div></div>
     <div class="content-bottom">
       <img src="images/grad-building.jpg" alt="Library">
