--- a/src/index.html
+++ b/src/index.html
@@ -20,12 +20,12 @@
           <p class="bottom">"The number one benefit of information technology is that it empowers people to do what they want to do. It lets people be creative. It lets people be productive. It lets people learn things they didn't think they could learn before, and so in a sense it is all about potential."
             <br>
             <span class="author"> Steve Ballmer<br></span>
-
+          </nav>
       </div>
       <div class="leftbar-bottom">
         <nav class="sidebar">
           <img src="images/avatar-med.jpg" alt="My avatar" id="avatar">
-          </p>
+
         </nav></div></div>
     <div class="topline">
       <nav class="navbar"><span class="links"></span><br>
@@ -45,10 +45,10 @@
         <input type="radio" name="radioMessageType" value="10year" id="10year" onclick = "changeP()" > 10 year plan: <br><br>
         <input type="radio" name="radioMessageType" value="Future" id="future" onclick = "changeP()" > Beyond: </p>
 
-      </p>
+
     </div>
     <div class="content-topright">
-      <p class=""maintext">Listen to welcome message:</p>
+      <p class="maintext">Listen to welcome message:</p>
       <audio controls>
         <source src="acrouse.ogg">
         <source src="acrouse.mp3">
@@ -74,7 +74,7 @@
     </footer>
   </div>
   </div>
-</div>
+
 </body>
 </html>
 
