--- a/src/leisure.html
+++ b/src/leisure.html
@@ -40,7 +40,7 @@
     <div class="leisure-topright">
       <p> <video src="images/IMG_4620.ogv" controls width="480" height="270"></video>
       <p></p>
-      <a href="images/IMG_4620.ogv">Download this file.</a></p>
+      <a href="images/IMG_4620.ogv">Download this file.</a>
     </div>
     <div class="leisure-left-bottom">
       <p class="bigtext">Last book read:</p>
@@ -78,6 +78,6 @@
       </footer>
     </div>
   </div>
-</div>
+
 </body>
 </html>
