--- a/src/skills.html
+++ b/src/skills.html
@@ -46,8 +46,8 @@
     </div>
 
     <div class="content-skills1"> <div class="list">
-      <ul>LAN, WAN network support
-
+      LAN, WAN network support
+      <ul>
         <li> JUNOS, Cisco, Dell CLI</li>
         <li> L2VPN, MPLS, OSPF, ISIS</li>
         <li> DNS Fusion Layer, Bind</li></ul>
@@ -55,21 +55,21 @@
 
 
   <div class="list">
-        <ul>LAN, WAN network installation
-
+        LAN, WAN network installation
+    <ul>
           <li> Telco orders</li>
           <li> Ethernet provisioning</li></ul></div>
 
 
 
-      <div class="list"><ul>Network Security
-
+      <div class="list">Network Security
+        <ul>
           <li>Fortinet, Palo Alto firewalls
         </ul></div>
         </div>
     <div class="content-right1">      <div class="list">
-      <ul>Prior Certifications
-
+      Prior Certifications
+      <ul>
         <li> JUNOS JNCIA</li>
         <li> Cisco CCNA </li>
         <li> Palo Alto PNCIA</li></ul>
