--- a/src/writing.html
+++ b/src/writing.html
@@ -41,12 +41,12 @@
       <h2><b>Work Related Writings</b></h2>
     </div>
     <div class="leisure-topright">
-      <h3><a href="olddata/ip - whatsitfor/ip-whatfor.htm" alt=transmission">In learning the history of IP.... </a> <img src="images/791.jpg" alt="ip">
-
+      <h3><a href="olddata/ipwhatsitfor/ip-whatfor.htm">In learning the history of IP.... </a> <img src="images/791.jpg" alt="ip">
+      </h3>
     </div>
     <div class="leisure-left-bottom"><h3>
       In my 2012 demo, the linked images had to be broken into sections because there were too many image files. So, one must complete each item (1,2, and 3) by clcking "Next" until first image in the group is seen
-   <br><a href="olddata/rfc791/take1-ip-rfc.htm" alt=transmission">Click to begin!</a> </h3></div>
+   <br><a href="olddata/rfc791/take1-ip-rfc.htm">Click to begin!</a> </h3></div>
     <div class="writing3">
       <img src="images/transmission.jpg" alt="transmission">
     </div>
@@ -61,6 +61,6 @@
       </footer>
     </div>
   </div>
-</div>
+
 </body>
 </html>
