--- a/src/edu.html
+++ b/src/edu.html
@@ -44,13 +44,13 @@
       </div>
 
     <div class="content-skills22">
-      <div class="list"><ul>BA English
-
+      <div class="list">BA English
+        <ul>
         <li> LSU 1996</li></ul></div>
-      <div class="list"><ul>MS Information Technology
+      <div class="list">MS Information Technology<ul>
         <li> Data Analytics concentration</li>
         <li> Nova Southeastern 2022</li></ul></div>
-      <div class="list"><ul>MS Conputer Information Systems
+      <div class="list">MS Conputer Information Systems<ul>
 
         <li> Application Development</li>
         <li> Boston University 2024</li>            </ul>
@@ -69,6 +69,6 @@
       </footer>
     </div>
   </div>
-</div>
+
 </body>
 </html>
